--- a/templates/master.html
+++ b/templates/master.html
@@ -3,7 +3,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>{{escape(handler.settings["web_title"])}}</title>
-        <link rel="stylesheet" href="{{ static_url("css/bootstrap.css") }}" type="text/css"/>
+        <link rel="script" href = "{{ static_url("js/index.js") }}" />
+        <link rel="stylesheet" href = "{{ static_url("css/bootstrap.css") }}" type="text/css"/>
         {% block head %}{% end %}
     </head>
 {% block body %}{% end %}
