--- a/templates/master.html
+++ b/templates/master.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{escape(handler.settings["web_title"])}}</title>
+    <link rel="shortcut icon" href="">
+    <link rel="icon" type="image/gif" href="">
     {% block head %}{% end %}
 </head>
 {% block body %}{% end %}
