--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="{{static_url('scripts/main.js')}}"></script>
 
     <form action="/u/login" method="POST">
-        Email: <input name="email" type="text"><br>
+        Email: <input name="username" type="text"><br>
         Password: <input name="password" type="password"><br>
         {% module xsrf_form_html() %}
         <input type="submit">
