React basics II

--- a/templates/master.html
+++ b/templates/master.html
@@ -9,4 +9,4 @@
     <link rel="icon" type="image/gif" href="">
     {% block head %}{% end %}
 </head>
-{% block body %}{% end %}
+{% bloscripasdfck body %}{% end %}
