#add handlers with mock data

--- a/template/index.html
+++ b/template/index.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Piscium</title>
-  <link rel="icon" href="/favicon.png" type="image/x-icon">
-<link href="../static/index.e174a279.css" rel="stylesheet"></head>
+  <link rel="icon" href="../static/favicon.png" type="image/x-icon">
+<link href="../static/index.e2115e14.css" rel="stylesheet"></head>
 
 <body>
   <div id="root"></div>
-<script type="text/javascript" src="../static/index.323f2963.js"></script></body>
+<script type="text/javascript" src="../static/index.b28fbf30.js"></script></body>
 
 </html>
